# IntelWorkshop

./: .gitignore  README.md
answear/: CMakeLists.txt  answear
answer/: CMakeLists.txt
c++Implementation/: CMakeLists.txt  fourierSingleCore.cpp
syclImplementation/: CMakeLists.txt  fourierSycl.cpp  plot_script.py
